hw5_lab8/tests/errors/lex_bad_escape.kt
fun main() {
    val s = "\q is not a valid escape"
}
